# Custos

./: .gitignore  README.md  TEAM_BLUEPRINT.md  pyproject.toml
00_governance/: AGENT_ROLE_MATRIX.md  AGENT_SPECIALIZATION_CONTRACTS.md  BUY_STRATEGY_INTEGRATION_RULES.md  CN_TRADING_CALENDAR.json  CZ_SECTOR_PREFERENCE.json  DAILY_REPORT_SPEC.md  DAILY_RUNBOOK.md  DAILY_THREE_SESSION_WORKFLOW.md  DATA_FLOW_CONTRACT.md  DATA_SOURCE_COVERAGE_MATRIX.md  DECISION_PRIORITY_RULES.md  EXISTING_TDX_USER_SCRIPTS_REVIEW.md  FORMULA_SCREEN_SECTOR_FILTER_WORKFLOW.md  FRAMEWORK_COMPLETION_CHECKLIST.md  FRAMEWORK_REVIEW_2026-07-10.md  INCREMENTAL_TRADE_LEDGER.md  INDUSTRY_RESEARCH_LAYER.md  INDUSTRY_TECHNICAL_CONFIRMATION_RULES.md  LOCAL_TDX_DATA_SOURCE_STATUS.md  MASTER_WORKFLOW.md  PHASE1_WORKFLOW.md  REPORT_BLUEPRINT_V2.md  REVIEW_CYCLE_CONTRACT.md  ROLE_BOUNDARY_INDUSTRY_VS_TECHNICAL.md  RSSHUB_PRIVATE_ROUTE_CANDIDATES.json  RSS_FILTER_CONFIG.json  RSS_SOURCE_REGISTRY.json  RSS_WORKFLOW.md  SCREENING_WORKFLOW.md  SCREEN_FORMULA_REGISTRY.json  SECTOR_STOCK_ANALYSIS_GRANULARITY.md  STOCK_POOL_BUY_STRATEGY_WORKFLOW.md  STOCK_SECTOR_MARKET_RULE.md  TDX_SKILL_AUDIT.md  TDX_SKILL_INTEGRATION_CONFIG.json  TQ_INTERFACE_PROBE_2026-07-20.md  UNIVERSAL_TECHNICAL_TREND_FRAMEWORK.md  after_close_review_workflow.md  b1_swing_strategy.md  cz_latest_judgment.md  (+5 more)
02_agents/: PHASE1_AGENT_ROLES.md
03_daily_plans/: 2026-07-09_chief_decision.md  2026-07-09_market_timing_score.md  2026-07-09_portfolio_review.md  2026-07-09_stock_pool.md  2026-07-09_theme_tracker.md  2026-07-09_wechat_summary.txt  (+23 more)
(+236 files in other folders)
